lesson_05/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: postgres-dicts-common
    labels:
        app: postgres
spec:
    type: NodePort
    ports:
        - port: 5432
    selector:
        app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres-dicts-common-ss
spec:
    serviceName: "postgres-dicts-common"
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:10.12
                  ports:
                      - containerPort: 5432
                        name: postgresdb
                  volumeMounts:
                      - name: postgresdb
                        mountPath: /var/lib/postgresql/data
                        subPath: postgres
    volumeClaimTemplates:
        - metadata:
              name: postgresdb
          spec:
              accessModes: [ "ReadWriteOnce"]
              storageClassName: standard
              resources:
                  requests:
                      storage: 1Gi
