lesson_05/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dicts-common-s
spec:
    selector:
        app: dicts-common-ms
    ports:
        - protocol: TCP
          port: 9000
          targetPort: web
#          nodePort: 30000
#    type: ClusterIP
    type: NodePort
